# rh-kern

./: Cargo.toml  kern.sh  kernel.rhai  rust-toolchain.toml
src/: log.rs  main.rs  util.rs
src/integration/: mod.rs
vm/: NvVars
vm/EFI/Boot/: Bootx64.efi
