[package]
name = "rh-kern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { version = "1.12.0", features = ["no_std", "only_i64"], default-features = false }
uefi = "0.19.0"
uefi-services = "0.16.0"
